@@ -10,14 +10,16 @@ import xdi2.core.syntax.XDIArc;
  */
 public class XDIConstants {
 
-	public static final Character CS_AUTHORITY_PERSONAL = new Character('='); 
-	public static final Character CS_AUTHORITY_LEGAL = new Character('+'); 
-	public static final Character CS_AUTHORITY_GENERAL = new Character('*'); 
-	public static final Character CS_CLASS_UNRESERVED = new Character('#'); 
-	public static final Character CS_CLASS_RESERVED = new Character('$'); 
-	public static final Character CS_VALUE = new Character('&');
-	public static final Character CS_MEMBER_UNORDERED = new Character('!'); 
-	public static final Character CS_MEMBER_ORDERED = new Character('@');
+	public static final String STRING_CONTEXT = "";
+
+	public static final Character CS_AUTHORITY_PERSONAL = Character.valueOf('='); 
+	public static final Character CS_AUTHORITY_LEGAL = Character.valueOf('+'); 
+	public static final Character CS_AUTHORITY_GENERAL = Character.valueOf('*'); 
+	public static final Character CS_CLASS_UNRESERVED = Character.valueOf('#'); 
+	public static final Character CS_CLASS_RESERVED = Character.valueOf('$'); 
+	public static final Character CS_LITERAL = Character.valueOf('&');
+	public static final Character CS_MEMBER_UNORDERED = Character.valueOf('!'); 
+	public static final Character CS_MEMBER_ORDERED = Character.valueOf('@');
 
 	public static final String XS_ROOT = "()";
 	public static final String XS_VARIABLE = "{}";
@@ -25,15 +27,11 @@ public class XDIConstants {
 	public static final String XS_COLLECTION = "[]";
 	public static final String XS_ATTRIBUTE = "<>";
 
-	public static final Character[] CS_ARRAY = new Character[] { CS_AUTHORITY_PERSONAL, CS_AUTHORITY_LEGAL, CS_AUTHORITY_GENERAL, CS_CLASS_UNRESERVED, CS_CLASS_RESERVED, CS_VALUE, CS_MEMBER_UNORDERED, CS_MEMBER_ORDERED };
+	public static final Character[] CS_ARRAY = new Character[] { CS_AUTHORITY_PERSONAL, CS_AUTHORITY_LEGAL, CS_AUTHORITY_GENERAL, CS_CLASS_UNRESERVED, CS_CLASS_RESERVED, CS_LITERAL, CS_MEMBER_UNORDERED, CS_MEMBER_ORDERED };
 
 	public static final XDIAddress XDI_ADD_ROOT = XDIAddress.create("");
-	public static final XDIAddress XDI_ADD_CONTEXT = XDIAddress.create("");
 
-	public static final XDIArc XDI_ARC_VALUE = XDIArc.create(XDIConstants.CS_VALUE.toString());
-	public static final XDIArc XDI_ARC_LITERAL = XDIArc.create(XDIConstants.CS_VALUE.toString());
-	public static final XDIAddress XDI_ADD_VALUE = XDIAddress.fromComponent(XDI_ARC_VALUE);
-	public static final XDIAddress XDI_ADD_LITERAL = XDIAddress.fromComponent(XDI_ARC_LITERAL);
+	public static final XDIArc XDI_ARC_LITERAL = XDIArc.create(CS_LITERAL.toString());
 
 	public static final XDIArc XDI_ARC_COMMON_VARIABLE = XDIArc.create(XDIConstants.XS_VARIABLE);
 	public static final XDIArc XDI_ARC_COMMON_DEFINITION = XDIArc.create(XDIConstants.XS_DEFINITION);
@@ -42,6 +40,7 @@ public class XDIConstants {
 
 	public static final XDIArc XDI_ARC_TRUE = XDIArc.create("$true");
 	public static final XDIArc XDI_ARC_FALSE = XDIArc.create("$false");
+
 	public static final XDIAddress XDI_ADD_TRUE = XDIAddress.fromComponent(XDI_ARC_TRUE);
 	public static final XDIAddress XDI_ADD_FALSE = XDIAddress.fromComponent(XDI_ARC_FALSE);
 
